--- a/config/vqvae_naruto.yaml
+++ b/config/vqvae_naruto.yaml
@@ -1,14 +1,15 @@
 model_params:
   in_channels: 3
-  convbn_blocks: 5
-  conv_kernel_size: [4, 4, 4, 4, 4]
-  conv_kernel_strides: [2, 2, 2, 2, 1]
-  convbn_channels: [3, 64, 128, 256, 512, 256]
+  convbn_blocks: 4
+  conv_kernel_size: [4, 4, 4, 4]
+  conv_kernel_strides: [2, 2, 2, 2]
+  convbn_channels: [3, 64, 128, 256, 512]
   conv_activation_fn: 'leaky'
-  transpose_bn_blocks: 5
-  transposebn_channels: [256, 512, 256, 128, 64, 3]
-  transpose_kernel_size: [4, 4, 4, 4, 4]
-  transpose_kernel_strides: [1, 2, 2, 2, 2]
+  transpose_bn_blocks: 4
+  transposebn_channels: [512, 256, 128, 64, 3]
+  transpose_kernel_size: [4, 4, 4, 4]
+  transpose_kernel_strides: [2, 2, 2, 2]
+  transpose_padding: [1, 1, 1, 1]
   transpose_activation_fn: 'leaky'
   latent_dim: 256
   codebook_size : 1024
