--- a/config/vqvae_naruto.yaml
+++ b/config/vqvae_naruto.yaml
@@ -13,14 +13,16 @@ model_params:
   transpose_activation_fn: 'leaky'
   latent_dim: 256
   codebook_size : 1024
+  decay: 0.99
+  epsilon: 1e-5
 
 train_params:
   task_name: 'vqvae_naruto'
-  batch_size: 128
-  epochs: 500
+  batch_size: 32
+  epochs: 200
   lr: 0.0002
-  crit: 'l2'
-  reconstruction_loss_weight : 5
+  crit: 'l1'
+  reconstruction_loss_weight : 1
   codebook_loss_weight : 1
   commitment_loss_weight : 1.0
   ckpt_name: 'best_vqvae_naruto.pth'
