--- a/config/vqvae_naruto.yaml
+++ b/config/vqvae_naruto.yaml
@@ -49,3 +49,16 @@ transformer_params:
   epochs: 200
 
   temperature: 0.8
+
+cftn_params:
+  n_layer: 12
+  n_head: 8
+  n_embd: 768
+  embd_pdrop: 0.1
+  resid_pdrop: 0.1
+  attn_pdrop: 0.1
+  lr: 0.0001
+  epochs: 500
+  temperature: 1.0
+  text_block_size: 128
+  steps: 12
